<resources>
    <string name="app_name">SpaceFlight</string>
    <string name="title_item_article">Title</string>
    <string name="site_item_article">Site</string>
    <string name="image_item_article">Image</string>
    <string name="title_appbar">Notícias</string>
    <string name="title_error_dialog">Não foi possível carregar as notícias</string>
    <string name="message_error_dialog">An internal server error occurred</string>
    <string name="test_button_error_dialog">OK</string>
    <string name="splash_title">Spaceflight</string>
    <string name="star">star</string>
</resources>