<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="300sp"
    android:background="@color/light"
    android:orientation="vertical">


    <TextView
        android:id="@+id/title_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20sp"
        android:text="@string/title_error_dialog"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/summary_dialog_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20sp"
        android:text="@string/message_error_dialog"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/title_dialog"
        app:layout_constraintStart_toStartOf="@id/title_dialog" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dark_blue" />


    <TextView
        android:id="@+id/btn_error_dialog"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/test_button_error_dialog"
        android:textAlignment="center"
        android:textColor="#EC4A81"
        android:textSize="20sp"
        android:textStyle="bold" />


</LinearLayout>


